Start skeleton of css and html

--- a/index.html
+++ b/index.html
@@ -7,10 +7,31 @@
     <title>Calculator</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
 <body>
     <div class="container">
-        
+        <div class="display"></div>
+        <div class="buttons">
+            <button class="btn">1</button>
+            <button class="btn">2</button>
+            <button class="btn">3</button>
+            <button class="btn">4</button>
+            <button class="btn">5</button>
+            <button class="btn">6</button>
+            <button class="btn">7</button>
+            <button class="btn">8</button>
+            <button class="btn">9</button>
+            <button class="btn">0</button>
+            <button class="btn">.</button>
+            <button class="btn">=</button>
+            <button class="btn">÷</button>
+            <button class="btn">-</button>
+            <button class="btn">+</button>
+            <button class="btn">x</button>
+            <button class="btn">Clear</button>
+            <button class="btn">Back</button>
+        </div>
     </div>
 </body>
 </html>
