--- a/index.html
+++ b/index.html
@@ -13,24 +13,26 @@
     <div class="container">
         <div class="display"></div>
         <div class="buttons">
+            <button class="btn">.</button>
+            <button class="btn">0</button>
+            <button class="btn">=</button>
+            <button class="btn">+</button>
             <button class="btn">1</button>
             <button class="btn">2</button>
             <button class="btn">3</button>
+            <button class="btn">-</button>
             <button class="btn">4</button>
             <button class="btn">5</button>
             <button class="btn">6</button>
+            <button class="btn">÷</button>
             <button class="btn">7</button>
             <button class="btn">8</button>
             <button class="btn">9</button>
-            <button class="btn">0</button>
-            <button class="btn">.</button>
-            <button class="btn">=</button>
-            <button class="btn">÷</button>
-            <button class="btn">-</button>
-            <button class="btn">+</button>
-            <button class="btn">x</button>
-            <button class="btn">Clear</button>
-            <button class="btn">Back</button>
+            <button class="btn">×</button>
+            <div class="clears">
+                <button class="btn" id="clear">Clear</button>
+                <button class="btn" id="back">Back</button>
+            </div>
         </div>
     </div>
 </body>
