--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="display"></div>
+        <div class="display">
+            <div class="docked"></div>
+            <div class="staged"></div>
+        </div>
         <div class="buttons">
             <button class="btn">.</button>
             <button class="btn">0</button>
