--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="display">
             <div class="docked"></div>
-            <div class="staged"></div>
+            <div class="staged">0</div>
         </div>
         <div class="buttons">
             <button class="btn">.</button>
