--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
             <div class="staged">0</div>
         </div>
         <div class="buttons">
-            <button class="btn">.</button>
-            <button class="btn">0</button>
-            <button class="btn">=</button>
-            <button class="btn">+</button>
-            <button class="btn">1</button>
-            <button class="btn">2</button>
-            <button class="btn">3</button>
-            <button class="btn">-</button>
-            <button class="btn">4</button>
-            <button class="btn">5</button>
-            <button class="btn">6</button>
-            <button class="btn">÷</button>
-            <button class="btn">7</button>
-            <button class="btn">8</button>
-            <button class="btn">9</button>
-            <button class="btn">×</button>
+            <button class="btn num" id="decimal">.</button>
+            <button class="btn num">0</button>
+            <button class="btn operator" id="operate">=</button>
+            <button class="btn operator" id="add">+</button>
+            <button class="btn num">1</button>
+            <button class="btn num">2</button>
+            <button class="btn num">3</button>
+            <button class="btn operator" id="subtract">-</button>
+            <button class="btn num">4</button>
+            <button class="btn num">5</button>
+            <button class="btn num">6</button>
+            <button class="btn operator" id="divide">÷</button>
+            <button class="btn num">7</button>
+            <button class="btn num">8</button>
+            <button class="btn num">9</button>
+            <button class="btn operator" id="multiply">×</button>
             <div class="clears">
                 <button class="btn" id="clear">Clear</button>
                 <button class="btn" id="back">Back</button>
